Arnaud: Draw an hexagon behind winning message. Style winning message. Fix disconnect of previous player but now viewer should not reset the game.

--- a/main/client/resources/css/main.css
+++ b/main/client/resources/css/main.css
@@ -151,9 +151,16 @@
 .winningMessage {
     font-family: AlrightSansMedium,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 26px;
-    fill: black;
+    fill: white;
     pointer-events: none;
     text-anchor: middle;
+}
+
+.winningMessageBackground {
+    stroke: black;
+    stroke-width: 1;
+    fill: white;
+    pointer-events: none;
 }
 
 .clickable svg g#cellsGroup use.boardCell:hover {
